--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "webpack": "3.8.1"
   },
   "dependencies": {
-    "baguettebox.js": "1.9.1",
-    "es6-docready": "1.0.0"
+    "baguettebox.js": "1.9.1"
   }
 }
