--- a/theme.toml
+++ b/theme.toml
@@ -4,8 +4,8 @@ licenselink = "https://github.com/eshlox/simplicity/blob/master/LICENSE"
 description = "Simple theme with clean typography."
 homepage    = "https://github.com/eshlox/simplicity"
 tags        = ["minimal", "clean", "svg", "comments"]
-features    = ["blog", "responsive", "404", "icons", "disqus", "metadata"]
-min_version = 0.30.2
+features    = ["blog", "responsive", "404", "disqus", "metadata"]
+min_version = "0.30.2"
 
 [author]
   name      = "Przemysław Kołodziejczyk"
