--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -19,6 +19,12 @@ title = "Simplicity - Hugo theme"
   posts = "/:year/:month/:day/:slug/"
 [pygmentsOptions]
   linenos = false
+[outputs]
+  home = ["HTML"]
+  page = ["HTML"]
+  section = ["HTML", "RSS"]
+  taxonomy = ["HTML", "RSS"]
+  taxonomyTerm = ["HTML"]
 [[menu.pages]]
   name = "My projects"
   weight = -100
