A lot of changes related to a new version

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -3,7 +3,6 @@ defaultContentLanguage = "en"
 enableEmoji = true
 googleAnalytics = ""
 languageCode = "en-us"
-paginate = 4
 pygmentsCodeFences = true
 pygmentsStyle = "native"
 pygmentsUseClasses =  true
@@ -13,14 +12,21 @@ title = "Simplicity - Hugo theme"
   gravatarEmail = "test@example.com"
   homepageText = "Simplicity"
   name = "Przemysław `eshlox` Kołodziejczyk"
+  telegram = "#"
+  twitter = "#"
+  github = "#"
+  stackoverflow = "#"
+  spotify = "#"
+  google_plus = "#"
+  linkedin = "#"
+  messenger = "#"
+  facebook = "#"
+  rss = "/posts/index.xml"
+  email = "#"
 [params]
   description = "A blog about everything."
   disqusShortname = "test"
   licence = "[Some Rights Reserved](http://creativecommons.org/licenses/by-sa/4.0/)."
-  adsenseDataAdClient = ""
-  adsenseDataAdSlot = ""
-  addThisId = ""
-  pagination = false
 [permalinks]
   posts = "/:year/:month/:day/:slug/"
 [pygmentsOptions]
