--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "css-loader": "0.28.7",
     "eslint": "4.10.0",
     "extract-text-webpack-plugin": "3.0.2",
-    "node-normalize-scss": "3.0.0",
     "node-sass": "4.5.3",
     "postcss-loader": "2.0.8",
     "sass-loader": "6.0.6",
@@ -34,6 +33,7 @@
   "dependencies": {
     "baguettebox.js": "^1.9.1",
     "headroom.js": "^0.9.4",
+    "normalize.css": "^8.0.0",
     "npm": "^6.0.0",
     "vanilla-lazyload": "^8.7.1"
   }
