--- a/assets/package.json
+++ b/assets/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "baguettebox.js": "^1.11.0",
     "headroom.js": "^0.9.4",
+    "milligram": "^1.3.0",
     "normalize.css": "^8.0.0",
     "vanilla-lazyload": "^10.18.0"
   }
